Invoice book caching backend responses works ]

--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -17,7 +17,7 @@
   <div class="flex w-full">
     <!-- Invoice List on the left -->
     <div
-      class="invoice-list-container relative flex flex-col h-screen max-h-[90%] w-[30%] overflow-hidden rounded border border-vls/40 bg-vlp dark:bg-vdp">
+      class="invoice-list-container relative flex flex-col h-screen max-h-[90%] w-[30%] overflow-hidden rounded border border-vls/40 bg-vlp dark:bg-vdp2">
       <!-- Sticky Header -->
       <div class="sticky top-0 z-10 p-4 bg-vlp dark:bg-vdp2 shadow-md">
         <p class="mb-2 font-medium text-vls3 dark:text-vds">Invoice Book</p>
@@ -30,10 +30,10 @@
             @click="$store.edit.fetchInvoice(item.id)"
             :id="'rowid-' + item.id"
             :class="{
-              'border-vls/80 bg-vlp2 dark:border-vls/80 dark:bg-vdp3 dark:text-white': item.id === $store.edit.activeItemId,
-              'border-vls/40 bg-vlp dark:bg-vds3neu700 dark:text-vds': item.id !== $store.edit.activeItemId
+              'border-vla2 bg-vlp dark:bg-vds3neu700 dark:border-vds/80 dark:text-white ': item.id === $store.edit.activeItemId,
+              'border-vls/40 dark:border-vls/40 bg-vlp dark:bg-vds3neu700 dark:hover:bg-vds2 dark:text-vds': item.id !== $store.edit.activeItemId
             }"
-            class="mb-2 flex cursor-pointer justify-between rounded border p-2 text-vls2 transition duration-200 hover:border-vls/80 hover:bg-vlp2 focus:border-vls/80 focus:bg-vlp2 active:border-vls/80 active:bg-vlp2 dark:hover:border-vls/80 dark:hover:bg-neutral-600 dark:hover:text-white dark:focus:border-vls/80 dark:active:border-vls/80">
+            class="mb-2 flex cursor-pointer justify-between rounded border p-2 text-vls2 transition duration-200">
             <div class="mr-2 flex flex-col text-left text-xs">
               <div x-text="item.client_name"></div>
               <!-- Invoice date -->
@@ -42,36 +42,44 @@
               <div class="flex text-xs" x-text="item.invoice_number"></div>
             </div>
             <div class="flex">
-              <!-- Toggle -->
-              <div x-data="{ switchOn: false }" class="mt-6">
-                <input id="thisId" type="checkbox" name="switch" class="hidden" :checked="switchOn" />
-                <button
-                  x-ref="switchButton"
-                  type="button"
-                  @click="switchOn = ! switchOn"
-                  :class="switchOn ? 'bg-blue-600' : 'bg-neutral-200'"
-                  class="relative inline-flex h-6 py-0.5 ml-4 focus:outline-none rounded-full w-10"
-                  x-cloak>
-                  <span
-                    :class="switchOn ? 'translate-x-[18px]' : 'translate-x-0.5'"
-                    class="w-5 h-5 duration-200 ease-in-out bg-white rounded-full shadow-md"></span>
-                </button>
-                <label
-                  @click="$refs.switchButton.click(); $refs.switchButton.focus()"
-                  :id="$id('switch')"
-                  :class="{ 'text-blue-600': switchOn, 'text-gray-400': ! switchOn }"
-                  class="text-sm select-none"
-                  x-cloak></label>
-              </div>
               <!-- Tooltip -->
               <div x-data="tooltip('Mark invoice as paid/unpaid. New invoices default to unpaid')" class="relative">
                 <div class="absolute top-0 right-0">
                   <span class="w-4 h-4 flex items-center justify-center border border-vls rounded-full text-xs">?</span>
                 </div>
               </div>
+              <!-- Toggle -->
+              <div x-data="{ switchOn: item.invoice_status === 'paid' }">
+                <input :id="'toggleId-' + item.id" type="checkbox" name="switch" class="hidden" :checked="switchOn" />
+
+                <button
+                  x-ref="switchButton"
+                  type="button"
+                  @click="switchOn = !switchOn; $store.edit.updatePaid(item.id, switchOn); $event.stopPropagation()"
+                  :class="switchOn ? 'bg-vla2 dark:bg-vda2/80' : 'bg-vlp2 dark:bg-vds3light '"
+                  class="relative inline-flex h-5 py-0.5 ml-4 focus:outline-none rounded-full w-9"
+                  x-cloak>
+                  <span
+                    :class="switchOn ? 'translate-x-[18px]' : 'translate-x-0.5'"
+                    class="w-4 h-4 duration-200 ease-in-out bg-white dark:bg-vds rounded-full shadow-md"></span>
+                </button>
+
+                <label
+                  @click="$refs.switchButton.click(); $refs.switchButton.focus(); $event.stopPropagation()"
+                  :id="$id('switch')"
+                  :class="{ 'text-blue-600': switchOn, 'text-gray-100': !switchOn }"
+                  class="text-sm select-none"
+                  x-cloak></label>
+              </div>
             </div>
           </div>
         </template>
+      </div>
+      <div class="mt-4 text-center" x-show="$store.edit.hasMore">
+        <button
+          @click="$store.edit.fetchListById()"
+          class="modal-btn-prim ml-4 mb-4"
+          x-text="$store.edit.loading ? 'Loading...' : 'Load More'"></button>
       </div>
     </div>
 
